force-app/main/default/objects/Time_Tracker__c/Time_Tracker__c.object-meta.xml
<CustomObject>
    <label>Time Tracker</label>
    <nameField>
        <displayFormat>TT-{00000}</displayFormat>
        <label>Time Tracker Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>