force-app/main/default/objects/Time_Tracker__c/fields/Internal_Task__c.field-meta.xml
<CustomField>
    <fullName>Internal_Task__c</fullName>
    <label>Internal Task</label>
    <referenceTo>Internal_Task__c</referenceTo>
    <relationshipLabel>Time Trackers</relationshipLabel>
    <relationshipName>Time_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>