force-app/main/default/objects/Time_Tracker__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to track the different values we are interested in.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eng - New</fullName>
            </value>
            <value>
                <fullName>Eng - In Review</fullName>
            </value>
            <value>
                <fullName>Eng - In Progress</fullName>
            </value>
            <value>
                <fullName>Eng - On Hold - Config Issue</fullName>
            </value>
            <value>
                <fullName>Eng - On Hold - Sales Assistance</fullName>
            </value>
            <value>
                <fullName>Eng - Return from Sales</fullName>
            </value>
            <value>
                <fullName>Eng - External Information Needed</fullName>
            </value>
            <value>
                <fullName>PP - New</fullName>
            </value>
            <value>
                <fullName>PP - In Process</fullName>
            </value>
            <value>
                <fullName>Inside Sales Process</fullName>
            </value>
            <value>
                <fullName>Review Quote</fullName>
            </value>
            <value>
                <fullName>Engineering Process</fullName>
                <isActive>false</isActive>
                <label>Engineering Process</label>
            </value>
            <value>
                <fullName>Overall IT Process</fullName>
                <isActive>false</isActive>
                <label>Overall IT Process</label>
            </value>
            <value>
                <fullName>Production Planning Process</fullName>
                <isActive>false</isActive>
                <label>Production Planning Process</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>